--- a/res/values/attrs.xml
+++ b/res/values/attrs.xml
@@ -73,4 +73,10 @@
         -->
         <attr name="inputType" format="string" />
     </declare-styleable>
+
+    <!-- Value to pass to callback when restore button is pressed -->
+    <declare-styleable name="ColorPreference">
+        <attr name="defaultColorValue" format="integer" />
+    </declare-styleable>
+    
 </resources>
