--- a/res/values/dimens.xml
+++ b/res/values/dimens.xml
@@ -38,4 +38,6 @@
     <dimen name="color_picker_button_margin_top">12dp</dimen>
     <dimen name="radio_group_padding">18dp</dimen>
     <dimen name="radio_button_spacing">6dp</dimen>
+
+    <dimen name="picker_circle_preview_size">26dp</dimen>
 </resources>
