KryptonSettings: Allow using 4G icon instead LTE [2/2]
Change-Id: Ib5ceb5537e2eff1450e9c80316d9e304b61225e5
Signed-off-by: Arghya Chanda <arghyac35@gmail.com>
Signed-off-by: SagarMakhar <sagarmakhar@gmail.com>
Signed-off-by: jhonboy121 <alfredmathew05@gmail.com>

--- a/res/xml/statusbar_settings.xml
+++ b/res/xml/statusbar_settings.xml
@@ -86,5 +86,12 @@
             android:summary="@string/status_bar_notif_count_summary"
             settings:controller="com.krypton.settings.statusbar.NotificationCountPreferenceController" />
 
+       <!-- 4G icon  -->
+       <com.krypton.settings.preference.SystemSettingSwitchPreference
+            android:key="show_fourg_icon"
+            android:title="@string/show_fourg_icon_title"
+            android:summary="@string/show_fourg_icon_summary"
+            android:defaultValue="false"/>
+
     </PreferenceCategory>
 </PreferenceScreen>
