KryptonSettings: Import CustomSeekbarPreference
* Credits: @difr for his ProperSeekbarPreference
* https://github.com/difr/android_device_xiaomi_land/commit/a92b140a4b5456a5262343467c8eec5ac4dcee37

@ZeNiXxX: Adapt to AndroidX

Signed-off-by: Pranav Vashi <neobuddy89@gmail.com>
Signed-off-by: spezi77 <spezi7713@gmx.net>
Signed-off-by: NurKeinNeid <mralexman3000@gmail.com>
Signed-off-by: jhonboy121 <alfredmathew05@gmail.com>

--- a/res/values/attrs.xml
+++ b/res/values/attrs.xml
@@ -79,4 +79,13 @@
         -->
         <attr name="inputType" format="string" />
     </declare-styleable>
+
+    <!-- Base attributes available to CustomSeekBarPreference. -->
+    <declare-styleable name="CustomSeekBarPreference">
+        <attr name="interval" format="integer" />
+        <attr name="showSign" format="boolean" />
+        <attr name="units" format="string|reference" />
+        <attr name="continuousUpdates" format="boolean" />
+        <attr name="defaultText" format="string|reference" />
+    </declare-styleable>
 </resources>
