Settings: Add option to launch statusbar tuner [2/2]
[ghostrider-reborn]
- Use Preference instead of PreferenceScreen for android 12

Change-Id: I301ac9416994449b941b5a9e0e9aa79a76f58281
Signed-off-by: Adithya R <gh0strider.2k18.reborn@gmail.com>

--- a/res/xml/statusbar_settings.xml
+++ b/res/xml/statusbar_settings.xml
@@ -88,6 +88,15 @@
             android:title="@string/use_old_mobiletype_title"
             android:summary="@string/use_old_mobiletype_summary"
             android:defaultValue="false" />
+
+	<!-- SystemUI Tuner-->
+        <Preference
+            android:key="icon_manager"
+            android:title="@string/icon_manager_title"
+            android:summary="@string/icon_manager_summary">
+            <intent android:action="com.android.settings.action.STATUS_BAR_TUNER" />
+        </Preference>
+
     </PreferenceCategory>
 
 </PreferenceScreen>
