KryptonSettings: update GamingMode implementation
We are using now the base classes instead of the custom ones from Settings core

--- a/res/values/krypton_strings.xml
+++ b/res/values/krypton_strings.xml
@@ -23,5 +23,7 @@
     <string name="gamingmode_status">Gaming Mode</string>
     <string name="gamingmode_enabled">Enabled</string>
     <string name="gamingmode_disabled">Disabled</string>
+    <string name="block_notifications_title">Disable notifications</string>
+    <string name="block_notifications_summary">Blocks all notifications except calls</string>
 
 </resources>
