--- a/res/values/krypton_strings.xml
+++ b/res/values/krypton_strings.xml
@@ -25,5 +25,8 @@
     <string name="gamingmode_disabled">Disabled</string>
     <string name="block_notifications_title">Disable notifications</string>
     <string name="block_notifications_summary">Blocks all notifications except calls</string>
+    <string name="select_apps_title">Select Apps</string>
+    <string name="select_apps_summary">Enable gaming mode per app</string>
+    <string name="gamingmode_apps_settings_title">Apps</string>
 
 </resources>
