--- a/res/xml/gamingmode_settings.xml
+++ b/res/xml/gamingmode_settings.xml
@@ -36,6 +36,12 @@
             android:key="block_notifications_preference"
             android:title="@string/block_notifications_title"
             android:summary="@string/block_notifications_summary" />
+
+        <Preference
+            android:fragment="com.krypton.settings.fragment.GamingModeAppsFragment"
+            android:key="select_apps_preference"
+            android:title="@string/select_apps_title"
+            android:summary="@string/select_apps_summary" />
     </PreferenceCategory>
 
 </PreferenceScreen>
