--- a/res/values/krypton_strings.xml
+++ b/res/values/krypton_strings.xml
@@ -23,8 +23,13 @@
     <string name="gamingmode_status">Gaming Mode</string>
     <string name="gamingmode_enabled">Enabled</string>
     <string name="gamingmode_disabled">Disabled</string>
-    <string name="block_notifications_title">Disable notifications</string>
-    <string name="block_notifications_summary">Blocks all notifications except calls</string>
+    <string name="block_notifications_title">Notifications</string>
+    <string name="block_notifications_summary">Click to configure</string>
+    <string name="disable_headsup">Disable heads-up</string>
+    <string name="disable_headsup_summary">Block peaking notifications</string>
+    <string name="ringermode_silent">Mute notifications</string>
+    <string name="ringermode_silent_summary">Will not even vibrate if set</string>
+    <string name="ringermode_vibrate">Vibrate for notifications</string>
     <string name="select_apps_title">Select Apps</string>
     <string name="select_apps_summary">Enable gaming mode per app</string>
     <string name="gamingmode_apps_settings_title">Apps</string>
