--- a/res/values/krypton_strings.xml
+++ b/res/values/krypton_strings.xml
@@ -33,5 +33,7 @@
     <string name="select_apps_title">Select Apps</string>
     <string name="select_apps_summary">Enable gaming mode per app</string>
     <string name="gamingmode_apps_settings_title">Apps</string>
+    <string name="lock_brightness_title">Lock brightness</string>
+    <string name="lock_brightness_summary">Disable adaptive brightness</string>
 
 </resources>
