KryptonSettings: added toogle for showing a toast when entering gaming mode
I find it annoying XD

--- a/res/xml/gamingmode_settings.xml
+++ b/res/xml/gamingmode_settings.xml
@@ -32,6 +32,11 @@
             android:summaryOn="@string/gamingmode_enabled"
             android:summaryOff="@string/gamingmode_disabled" />
 
+        <SwitchPreference
+            android:key="show_toast_preference"
+            android:title="@string/show_toast_title"
+            android:summary="@string/show_toast_summary" />
+
         <Preference
             android:key="block_notifications_preference"
             android:fragment="com.krypton.settings.fragment.GamingModeBlockerFragment"
