--- a/res/values/krypton_strings.xml
+++ b/res/values/krypton_strings.xml
@@ -23,6 +23,8 @@
     <string name="gamingmode_status">Gaming Mode</string>
     <string name="gamingmode_enabled">Enabled</string>
     <string name="gamingmode_disabled">Disabled</string>
+    <string name="show_toast_title">Toasts</string>
+    <string name="show_toast_summary">Show a toast when entering gaming mode</string>
     <string name="block_notifications_title">Notifications</string>
     <string name="block_notifications_summary">Click to configure</string>
     <string name="disable_headsup">Disable heads-up</string>
