KryptonSettings: add device specific settings
icon from https://materialdesignicons.com/icon/cellphone-settings-variant

--- a/res/values/krypton_strings.xml
+++ b/res/values/krypton_strings.xml
@@ -42,4 +42,8 @@
     <string name="statusbar_settings_title">Status Bar</string>
     <string name="statusbar_settings_summary">Customisation for status bar</string>
 
+    <!-- Device Settings -->
+    <string name="device_settings_title">Device Settings</string>
+    <string name="device_settings_summary">Settings for device specific parts</string>
+
 </resources>
