KryptonSettings: added a search widget and an executorservice to do background tasks
* fixed a bug where null was a prefix to the first app in the gaming mode list
* reset button is now in action bar
* background thread handles fetching list and loading checkboxes so ui now opens up in a jiffy

--- a/res/values/krypton_strings.xml
+++ b/res/values/krypton_strings.xml
@@ -35,6 +35,8 @@
     <string name="select_apps_title">Select Apps</string>
     <string name="select_apps_summary">Enable gaming mode per app</string>
     <string name="gamingmode_apps_settings_title">Apps</string>
+    <string name="gamingmode_apps_reset_string">Reset preferences</string>
+    <string name="string_search_app">Search</string>
     <string name="lock_brightness_title">Lock brightness</string>
     <string name="lock_brightness_summary">Disable adaptive brightness</string>
 
