--- a/res/values/config.xml
+++ b/res/values/config.xml
@@ -41,6 +41,8 @@
         <item>@drawable/fod_icon_scratch_pink_blue</item>
         <item>@drawable/fod_icon_scratch_red_blue</item>
         <item>@drawable/fod_icon_fire_ice_ouroboros</item>
+        <item>@drawable/fod_icon_light</item>
+        <item>@drawable/fod_icon_gxzw</item>
     </array>
 
     <!-- Default column count of FOD icon picker layout -->
