KryptonSettings: added more customisations and cleanup
* introduced our custom preferences which helped cleanup a lot of boilerplate
* added setings for: double to sleep, brightness slider position, fod animations, lockscreen charging info
* vastly improved code of FODSettingsActivity
* ic_statusbar_qs_settings.xml taken from https://github.com/yaap/packages_apps_YASP/commit/c31b3d1ae2ec1cd3a6a2724253835db5065f8808#diff-d5653e7cc31ef21452cc2f08e05ef19ce051223f5886ad813aaea433d9b27553
Signed-off-by: jhonboy121 <alfredmathew05@gmail.com>

--- a/res/layout/fod_settings_layout.xml
+++ b/res/layout/fod_settings_layout.xml
@@ -74,7 +74,19 @@
             android:fontFamily="@*android:string/config_bodyFontFamily"
             android:paddingStart="@dimen/switch_padding_start"
             android:paddingEnd="@dimen/switch_padding_end"
-            android:onClick="toggleFodAnim" />
+            android:onClick="toggleFODAnim" />
+
+        <Switch
+            android:id="@+id/fod_animation_always_on_switch"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            android:text="@string/fod_animation_always_on_switch_title"
+            android:textSize="@dimen/switch_text_size"
+            android:fontFamily="@*android:string/config_bodyFontFamily"
+            android:paddingStart="@dimen/switch_padding_start"
+            android:paddingEnd="@dimen/switch_padding_end"
+            android:onClick="setFODAnimationAlwaysOn" />
 
         <HorizontalScrollView
             android:id="@+id/fod_anims_container"
