--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -5,7 +5,7 @@
      you may not use this file except in compliance with the License.
      You may obtain a copy of the License at
 
-          http://www.apache.org/licenses/LICENSE-2.0
+         http://www.apache.org/licenses/LICENSE-2.0
 
      Unless required by applicable law or agreed to in writing, software
      distributed under the License is distributed on an "AS IS" BASIS,
@@ -13,5 +13,15 @@
      See the License for the specific language governing permissions and
      limitations under the License.
 -->
-<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
-    android:title="@string/gamingmode_apps_settings_title" />
+<resources>
+    <string-array name="ringer_modes">
+        <item>@string/ringermode_normal</item>
+        <item>@string/ringermode_vibrate</item>
+        <item>@string/ringermode_silent</item>
+    </string-array>
+    <string-array name="ringer_mode_values">
+        <item>0</item>
+        <item>1</item>
+        <item>2</item>
+    </string-array>
+</resources>
