--- a/res/xml/gamingmode_settings.xml
+++ b/res/xml/gamingmode_settings.xml
@@ -17,37 +17,62 @@
     xmlns:settings="http://schemas.android.com/apk/res-auto"
     android:title="@string/gamingmode_settings_title">
 
-        <SwitchPreference
+        <com.krypton.settings.preference.SettingSwitchPreference
             android:key="gamingmode_switch_preference"
             android:title="@string/gamingmode_status"
             android:summaryOn="@string/gamingmode_enabled"
-            android:summaryOff="@string/gamingmode_disabled" />
+            android:summaryOff="@string/gamingmode_disabled"
+            settings:settingKey="gamingmode_enabled"
+            settings:settingNamespace="system" />
 
-        <SwitchPreference
+        <com.krypton.settings.preference.SettingSwitchPreference
             android:key="show_toast_preference"
             android:title="@string/show_toast_title"
-            android:summary="@string/show_toast_summary" />
+            android:summary="@string/show_toast_summary"
+            android:dependency="gamingmode_switch_preference"
+            settings:settingKey="gamingmode_toast"
+            settings:settingNamespace="system" />
 
-        <Preference
-            android:key="block_notifications_preference"
-            android:fragment="com.krypton.settings.fragment.GamingModeBlockerFragment"
-            android:title="@string/block_notifications_title"
-            android:summary="@string/block_notifications_summary" />
+        <com.krypton.settings.preference.SettingSwitchPreference
+            android:key="disable_headsup_preference"
+            android:title="@string/disable_headsup"
+            android:summary="@string/disable_headsup_summary"
+            android:dependency="gamingmode_switch_preference"
+            settings:settingKey="gamingmode_disable_headsup"
+            settings:settingNamespace="system" />
 
-        <Preference
-            android:fragment="com.krypton.settings.fragment.GamingModeAppsFragment"
-            android:key="select_apps_preference"
-            android:title="@string/select_apps_title"
-            android:summary="@string/select_apps_summary" />
+        <com.krypton.settings.preference.SettingListPreference
+            android:key="ringermode_preference"
+            android:title="@string/ringermode_title"
+            android:summary="%s"
+            android:dependency="gamingmode_switch_preference"
+            android:entries="@array/ringer_modes"
+            android:entryValues="@array/ringer_mode_values"
+            android:defaultValue="0"
+            settings:settingKey="gamingmode_ringermode"
+            settings:settingNamespace="system" />
 
-        <SwitchPreference
+        <com.krypton.settings.preference.SettingSwitchPreference
             android:key="brightness_lock_preference"
             android:title="@string/lock_brightness_title"
-            android:summary="@string/lock_brightness_summary" />
+            android:summary="@string/lock_brightness_summary"
+            android:dependency="gamingmode_switch_preference"
+            settings:settingKey="gamingmode_lock_brightness"
+            settings:settingNamespace="system" />
 
-        <SwitchPreference
+        <com.krypton.settings.preference.SettingSwitchPreference
             android:key="brightness_restore_preference"
             android:title="@string/restore_brightness_title"
-            android:summary="@string/restore_brightness_summary" />
+            android:summary="@string/restore_brightness_summary"
+            android:dependency="gamingmode_switch_preference"
+            settings:settingKey="gamingmode_restore_brightness"
+            settings:settingNamespace="system" />
+
+        <Preference
+            android:key="select_apps_preference"
+            android:title="@string/select_apps_title"
+            android:summary="@string/select_apps_summary"
+            android:dependency="gamingmode_switch_preference"
+            android:fragment="com.krypton.settings.fragment.GamingModeAppsFragment" />
 
 </PreferenceScreen>
