--- a/res/layout/fod_settings_layout.xml
+++ b/res/layout/fod_settings_layout.xml
@@ -52,6 +52,7 @@
         android:orientation="vertical">
 
         <HorizontalScrollView
+            android:id="@+id/fod_icons_container"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="2">
