KryptonSettings: added navigation bar and other miscellaneous customisations
* relocated gamingmode to miscellaneous, added smart space toggle as well
* grouped statusbar settings, added network traffic indicator settings
* introduced our custom edit text preference
* ic_navbar_settings taken from https://github.com/yaap/packages_apps_YASP/commit/c31b3d1ae2ec1cd3a6a2724253835db5065f8808#diff-032ac8005d45eab2b3be66cb4d74e3ef7f2aafcdb490a398b149c4199529d8e0

Signed-off-by: jhonboy121 <alfredmathew05@gmail.com>

--- a/res/values/attrs.xml
+++ b/res/values/attrs.xml
@@ -14,7 +14,7 @@
      limitations under the License.
 -->
 <resources>
-    <declare-styleable name="SettingSwitchPreference">
+    <declare-styleable name="SettingPreferenceBaseAttrs">
         <!-- Key to be uesd for saving setting with SettingsProvider -->
         <attr name="settingKey" format="string" />
 
@@ -26,9 +26,6 @@
     </declare-styleable>
 
     <declare-styleable name="SettingListPreference">
-        <attr name="settingKey" format="string" />
-        <attr name="settingNamespace" format="string" />
-
         <!-- If empty then android:entryValues will be used -->
         <attr name="settingValues" format="reference" />
     </declare-styleable>
