--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -24,4 +24,28 @@
         <item>1</item>
         <item>2</item>
     </string-array>
+
+    <string-array name="network_traffic_modes">
+        <item>@string/network_traffic_mode_both</item>
+        <item>@string/network_traffic_mode_up</item>
+        <item>@string/network_traffic_mode_down</item>
+        <item>@string/network_traffic_mode_combined</item>
+        <item>@string/network_traffic_mode_dynamic</item>
+    </string-array>
+    <string-array name="network_traffic_mode_values">
+        <item>0</item>
+        <item>1</item>
+        <item>2</item>
+        <item>3</item>
+        <item>4</item>
+    </string-array>
+
+    <string-array name="network_traffic_locations">
+        <item>@string/network_traffic_in_statusbar</item>
+        <item>@string/network_traffic_in_qs_header</item>
+    </string-array>
+    <string-array name="network_traffic_location_values">
+        <item>0</item>
+        <item>1</item>
+    </string-array>
 </resources>
