--- a/res/xml/statusbar_qs_settings.xml
+++ b/res/xml/statusbar_qs_settings.xml
@@ -17,39 +17,98 @@
     xmlns:settings="http://schemas.android.com/apk/res-auto"
     android:title="@string/statusbar_qs_settings_title">
 
-    <!-- DT2S -->
-    <com.krypton.settings.preference.SettingSwitchPreference
-        android:key="statusbar_dt2s_switch_preference"
-        android:title="@string/statusbar_dt2s_title"
-        settings:settingKey="double_tap_sleep_gesture"
-        settings:settingNamespace="system" />
+    <PreferenceCategory
+        android:title="@string/statusbar_gestures_category_title">
 
-    <com.krypton.settings.preference.SettingSwitchPreference
-        android:key="qs_show_slider_switch_preference"
-        android:title="@string/qs_show_slider_title"
-        settings:settingKey="qs_show_brightness"
-        settings:settingNamespace="system"
-        settings:settingDefault="1" />
+        <!-- DT2S -->
+        <com.krypton.settings.preference.SettingSwitchPreference
+            android:key="statusbar_dt2s_switch_preference"
+            android:title="@string/statusbar_dt2s_title"
+            settings:settingKey="double_tap_sleep_gesture"
+            settings:settingNamespace="system" />
+    </PreferenceCategory>
 
-    <com.krypton.settings.preference.SettingSwitchPreference
-        android:key="qs_show_auto_brightness_icon_switch_preference"
-        android:title="@string/qs_show_auto_brightness_icon_title"
-        android:dependency="qs_show_slider_switch_preference"
-        settings:settingKey="qs_show_auto_brightness_icon"
-        settings:settingNamespace="system" />
+    <!-- Brightness slider -->
+    <PreferenceCategory
+        android:title="@string/brightness_slider_category_title">
 
-    <com.krypton.settings.preference.SettingSwitchPreference
-        android:key="qs_show_slider_bottom_switch_preference"
-        android:title="@string/qs_show_slider_bottom_title"
-        android:dependency="qs_show_slider_switch_preference"
-        settings:settingKey="qs_brightness_position_bottom"
-        settings:settingNamespace="system" />
+        <com.krypton.settings.preference.SettingSwitchPreference
+            android:key="qs_show_slider_switch_preference"
+            android:title="@string/qs_show_slider_title"
+            settings:settingKey="qs_show_brightness"
+            settings:settingNamespace="system"
+            settings:settingDefault="1" />
 
-    <com.krypton.settings.preference.SettingSwitchPreference
-        android:key="qs_show_slider_above_footer_switch_preference"
-        android:title="@string/qs_show_slider_above_footer_title"
-        android:dependency="qs_show_slider_bottom_switch_preference"
-        settings:settingKey="qs_show_brightness_above_footer"
-        settings:settingNamespace="system" />
+        <com.krypton.settings.preference.SettingSwitchPreference
+            android:key="qs_show_auto_brightness_icon_switch_preference"
+            android:title="@string/qs_show_auto_brightness_icon_title"
+            android:dependency="qs_show_slider_switch_preference"
+            settings:settingKey="qs_show_auto_brightness_icon"
+            settings:settingNamespace="system" />
 
+        <com.krypton.settings.preference.SettingSwitchPreference
+            android:key="qs_show_slider_bottom_switch_preference"
+            android:title="@string/qs_show_slider_bottom_title"
+            android:dependency="qs_show_slider_switch_preference"
+            settings:settingKey="qs_brightness_position_bottom"
+            settings:settingNamespace="system" />
+
+        <com.krypton.settings.preference.SettingSwitchPreference
+            android:key="qs_show_slider_above_footer_switch_preference"
+            android:title="@string/qs_show_slider_above_footer_title"
+            android:dependency="qs_show_slider_bottom_switch_preference"
+            settings:settingKey="qs_show_brightness_above_footer"
+            settings:settingNamespace="system" />
+    </PreferenceCategory>
+
+    <!-- Network traffic -->
+    <PreferenceCategory
+        android:title="@string/network_traffic_category_title">
+
+        <com.krypton.settings.preference.SettingSwitchPreference
+            android:key="statusbar_show_network_traffic_switch_preference"
+            android:title="@string/statusbar_show_network_traffic_title"
+            settings:settingKey="network_traffic_state"
+            settings:settingNamespace="system" />
+
+        <com.krypton.settings.preference.SettingEditTextPreference
+            android:key="statusbar_network_traffic_threshold_preference"
+            android:title="@string/statusbar_network_traffic_threshold_title"
+            android:dependency="statusbar_show_network_traffic_switch_preference"
+            android:summary="@string/statusbar_network_traffic_threshold_summary"
+            android:dialogTitle="@string/statusbar_network_traffic_threshold_dialog_title"
+            settings:settingKey="network_traffic_autohide_threshold"
+            settings:settingNamespace="system"
+            settings:settingDefault="1" />
+
+        <com.krypton.settings.preference.SettingListPreference
+            android:key="statusbar_network_traffic_type_preference"
+            android:title="@string/statusbar_network_traffic_type_title"
+            android:dependency="statusbar_show_network_traffic_switch_preference"
+            android:summary="%s"
+            android:entries="@array/network_traffic_modes"
+            android:entryValues="@array/network_traffic_mode_values"
+            android:defaultValue="0"
+            settings:settingKey="network_traffic_type"
+            settings:settingNamespace="system" />
+
+        <com.krypton.settings.preference.SettingListPreference
+            android:key="statusbar_network_traffic_location_preference"
+            android:title="@string/statusbar_network_traffic_location_title"
+            android:dependency="statusbar_show_network_traffic_switch_preference"
+            android:summary="%s"
+            android:entries="@array/network_traffic_locations"
+            android:entryValues="@array/network_traffic_location_values"
+            android:defaultValue="0"
+            settings:settingKey="network_traffic_view_location"
+            settings:settingNamespace="system" />
+
+        <com.krypton.settings.preference.SettingSwitchPreference
+            android:key="statusbar_show_network_traffic_arrow_switch_preference"
+            android:title="@string/statusbar_show_network_traffic_arrow_title"
+            android:dependency="statusbar_show_network_traffic_switch_preference"
+            settings:settingKey="network_traffic_arrow"
+            settings:settingNamespace="system"
+            settings:settingDefault="1" />
+    </PreferenceCategory>
 </PreferenceScreen>
