--- a/res/drawable/btn_checked.xml
+++ b/res/drawable/btn_checked.xml
@@ -13,5 +13,13 @@
      See the License for the specific language governing permissions and
      limitations under the License.
 -->
-<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
-    android:title="@string/gamingmode_apps_settings_title" />
+<shape xmlns:android="http://schemas.android.com/apk/res/android"
+    android:shape="rectangle">
+
+    <solid android:color="?android:attr/colorPrimary" />
+
+    <corners android:radius="@dimen/rounded_corner_radius" />
+
+    <stroke android:width="@dimen/stroke_width"
+        android:color="?android:attr/colorAccent" />
+</shape>
