--- a/res/layout/fod_list_item.xml
+++ b/res/layout/fod_list_item.xml
@@ -5,7 +5,7 @@
      you may not use this file except in compliance with the License.
      You may obtain a copy of the License at
 
-          http://www.apache.org/licenses/LICENSE-2.0
+         http://www.apache.org/licenses/LICENSE-2.0
 
      Unless required by applicable law or agreed to in writing, software
      distributed under the License is distributed on an "AS IS" BASIS,
@@ -13,11 +13,13 @@
      See the License for the specific language governing permissions and
      limitations under the License.
 -->
-<shape xmlns:android="http://schemas.android.com/apk/res/android"
-    android:shape="rectangle">
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content">
 
-    <solid android:color="?android:attr/colorPrimaryDark" />
-
-    <corners android:radius="@dimen/rounded_corner_radius" />
-
-</shape>
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="@dimen/fod_list_item_size"
+        android:layout_height="@dimen/fod_list_item_size"
+        android:scaleType="centerCrop" />
+</LinearLayout>
