--- a/res/layout/gamingmode_apps_picker.xml
+++ b/res/layout/gamingmode_apps_picker.xml
@@ -5,7 +5,7 @@
      you may not use this file except in compliance with the License.
      You may obtain a copy of the License at
 
-          http://www.apache.org/licenses/LICENSE-2.0
+         http://www.apache.org/licenses/LICENSE-2.0
 
      Unless required by applicable law or agreed to in writing, software
      distributed under the License is distributed on an "AS IS" BASIS,
@@ -13,14 +13,13 @@
      See the License for the specific language governing permissions and
      limitations under the License.
 -->
-<shape xmlns:android="http://schemas.android.com/apk/res/android"
-    android:shape="rectangle">
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
-    <solid android:color="?android:attr/colorPrimaryDark" />
-
-    <corners android:radius="@dimen/rounded_corner_radius" />
-
-    <stroke android:color="@color/color_grey"
-        android:width="@dimen/stroke_width" />
-
-</shape>
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/gamingmode_apps_recyclerview"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
+</LinearLayout>
