--- a/res/values/dimens.xml
+++ b/res/values/dimens.xml
@@ -14,10 +14,15 @@
      limitations under the License.
 -->
 <resources>
-    <dimen name="button_padding">10dp</dimen>
+    <dimen name="default_margin">16dp</dimen>
+    <dimen name="app_icon_size">40dp</dimen>
+    <dimen name="textview_padding_default">8dp</dimen>
+
     <dimen name="rounded_corner_radius">12dp</dimen>
     <dimen name="stroke_width">2dp</dimen>
-    <dimen name="button_padding_anim">5dp</dimen>
+
+    <dimen name="fod_icon_button_padding">10dp</dimen>
+    <dimen name="fod_anim_button_padding">5dp</dimen>
     <dimen name="preview_margin">80dp</dimen>
     <dimen name="selector_container_margin_bottom">20dp</dimen>
     <dimen name="switch_padding_start">60dp</dimen>
@@ -25,4 +30,5 @@
     <dimen name="switch_text_size">16sp</dimen>
     <dimen name="fod_icon_preview_size">55dp</dimen>
     <dimen name="fod_anim_preview_size">200dp</dimen>
+    <dimen name="fod_list_item_size">70dp</dimen>
 </resources>
