--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -48,4 +48,28 @@
         <item>0</item>
         <item>1</item>
     </string-array>
+
+    <string-array name="ambient_pulse_color_modes">
+        <item>@string/pulse_color_mode_accent</item>
+        <item>@string/pulse_color_mode_wallpaper</item>
+        <item>@string/pulse_color_mode_notification</item>
+        <item>@string/pulse_color_mode_custom</item>
+    </string-array>
+    <string-array name="ambient_pulse_color_mode_values">
+        <item>0</item>
+        <item>1</item>
+        <item>2</item>
+        <item>3</item>
+    </string-array>
+
+    <string-array name="statusbar_battery_styles">
+        <item>@string/battery_style_portrait</item>
+        <item>@string/battery_style_circle</item>
+        <item>@string/battery_style_text</item>
+    </string-array>
+    <string-array name="statusbar_battery_style_values">
+        <item>0</item>
+        <item>1</item>
+        <item>2</item>
+    </string-array>
 </resources>
