--- a/res/values/dimens.xml
+++ b/res/values/dimens.xml
@@ -15,6 +15,7 @@
 -->
 <resources>
     <dimen name="default_margin">16dp</dimen>
+    <dimen name="default_padding">16dp</dimen>
     <dimen name="app_icon_size">40dp</dimen>
     <dimen name="textview_padding_default">8dp</dimen>
 
@@ -31,4 +32,8 @@
     <dimen name="fod_icon_preview_size">55dp</dimen>
     <dimen name="fod_anim_preview_size">200dp</dimen>
     <dimen name="fod_list_item_size">70dp</dimen>
+
+    <dimen name="color_preview_size">200dp</dimen>
+    <dimen name="color_preview_padding">9dp</dimen>
+    <dimen name="hex_color_textview_margin_top">12dp</dimen>
 </resources>
