--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -14,11 +14,11 @@
      limitations under the License.
 -->
 <resources>
-    <color name="color_white">#FFFFFF</color>
-    <color name="color_cyan">#00FFFF</color>
-    <color name="color_grey">#A9A9A9</color>
-    <color name="color_black">#000000</color>
-    <color name="color_red">#FF0000</color>
-    <color name="color_green">#00FF00</color>
-    <color name="color_blue">#0000FF</color>
+    <style name="ColorSeekBarStyle" parent="Widget.AppCompat.SeekBar">
+        <item name="android:layout_width">0dp</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:max">255</item>
+        <item name="android:paddingStart">@dimen/color_preview_padding</item>
+        <item name="android:paddingEnd">@dimen/color_preview_padding</item>
+    </style>
 </resources>
